# Hamiltonian-MI

./: .gitignore  CMakeLists.txt  README.md  field.txt  field_nmr.txt  main  main.cpp  main.h
fields/NMRpulse_2Q_180y2_1to50_500us_NR/: NMRpulse_2Q_180y2_1.txt  NMRpulse_2Q_180y2_10.txt  NMRpulse_2Q_180y2_11.txt  NMRpulse_2Q_180y2_12.txt  NMRpulse_2Q_180y2_13.txt  NMRpulse_2Q_180y2_14.txt  NMRpulse_2Q_180y2_15.txt  NMRpulse_2Q_180y2_16.txt  NMRpulse_2Q_180y2_17.txt  NMRpulse_2Q_180y2_18.txt  NMRpulse_2Q_180y2_19.txt  NMRpulse_2Q_180y2_2.txt  NMRpulse_2Q_180y2_20.txt  NMRpulse_2Q_180y2_21.txt  NMRpulse_2Q_180y2_22.txt  NMRpulse_2Q_180y2_23.txt  NMRpulse_2Q_180y2_24.txt  NMRpulse_2Q_180y2_25.txt  NMRpulse_2Q_180y2_26.txt  NMRpulse_2Q_180y2_27.txt  NMRpulse_2Q_180y2_28.txt  NMRpulse_2Q_180y2_29.txt  NMRpulse_2Q_180y2_3.txt  NMRpulse_2Q_180y2_30.txt  NMRpulse_2Q_180y2_31.txt  NMRpulse_2Q_180y2_32.txt  NMRpulse_2Q_180y2_33.txt  NMRpulse_2Q_180y2_34.txt  NMRpulse_2Q_180y2_35.txt  NMRpulse_2Q_180y2_36.txt  NMRpulse_2Q_180y2_37.txt  NMRpulse_2Q_180y2_38.txt  NMRpulse_2Q_180y2_39.txt  NMRpulse_2Q_180y2_4.txt  NMRpulse_2Q_180y2_40.txt  NMRpulse_2Q_180y2_41.txt  NMRpulse_2Q_180y2_42.txt  NMRpulse_2Q_180y2_43.txt  NMRpulse_2Q_180y2_44.txt  NMRpulse_2Q_180y2_45.txt  (+10 more)
fields/NMRpulse_2Q_180y2_51to100_500us_R/: NMRpulse_2Q_180y2_100.txt  NMRpulse_2Q_180y2_51.txt  NMRpulse_2Q_180y2_52.txt  NMRpulse_2Q_180y2_53.txt  NMRpulse_2Q_180y2_54.txt  NMRpulse_2Q_180y2_55.txt  NMRpulse_2Q_180y2_56.txt  NMRpulse_2Q_180y2_57.txt  NMRpulse_2Q_180y2_58.txt  (+41 more)
temporary_moving/: main.cpp  main.h
(+1 files in other folders)
